--- a/fssearch-parent/pom.xml
+++ b/fssearch-parent/pom.xml
@@ -28,23 +28,31 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
-	
-		<modules>
-	<module>fssearch-api</module>
-		</modules>
+
+	<modules>
+		<module>fssearch-api</module>
+	</modules>
 
 	<properties>
 		<elasticsearch.version>1.4.0</elasticsearch.version>
+		<tika.version>1.5</tika.version>
 		<poi.version>3.10.1</poi.version>
+		<lucene.version>4.10.2</lucene.version>
+		<fsriver.version>1.4.0-SNAPSHOT</fsriver.version>
 	</properties>
-	
-	
+
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>org.elasticsearch</groupId>
 				<artifactId>elasticsearch</artifactId>
 				<version>${elasticsearch.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>fr.pilato.elasticsearch.river</groupId>
+				<artifactId>fsriver</artifactId>
+				<version>${fsriver.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.poi</groupId>
@@ -91,6 +99,11 @@
 				<artifactId>jsch</artifactId>
 				<version>0.1.51</version>
 			</dependency>
+			<dependency>
+				<groupId>log4j</groupId>
+				<artifactId>log4j</artifactId>
+				<version>1.2.17</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -102,7 +115,20 @@
 			<timezone>+1</timezone>
 		</developer>
 	</developers>
-	
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.2</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 	<!-- <scm> -->
 	<!-- <connection>scm:git:git@github.com:dadoonet/fsriver.git</connection> -->
@@ -115,115 +141,115 @@
 	<!-- <url>https://github.com/dadoonet/fsriver/issues/</url> -->
 	<!-- </issueManagement> -->
 
-<!-- 	<build> -->
-<!-- 		<plugins> -->
-<!-- 			<plugin> -->
-<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
-<!-- 				<artifactId>maven-compiler-plugin</artifactId> -->
-<!-- 				<version>2.3.2</version> -->
-<!-- 				<configuration> -->
-<!-- 					<source>1.7</source> -->
-<!-- 					<target>1.7</target> -->
-<!-- 				</configuration> -->
-<!-- 			</plugin> -->
-<!-- 			<plugin> -->
-<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
-<!-- 				<artifactId>maven-javadoc-plugin</artifactId> -->
-<!-- 				<version>2.8</version> -->
-<!-- 			</plugin> -->
-<!-- 			<plugin> -->
-<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
-<!-- 				<artifactId>maven-source-plugin</artifactId> -->
-<!-- 				<version>2.1.2</version> -->
-<!-- 			</plugin> -->
-			<!-- Add/Edit items in META-INF/MANIFEST.MF -->
-<!-- 			<plugin> -->
-<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
-<!-- 				<artifactId>maven-jar-plugin</artifactId> -->
-<!-- 				<version>2.3.2</version> -->
-<!-- 			</plugin> -->
-			<!-- Copy dependencies into lib folder -->
-			<!-- To see full classpath use mvn dependency:build-classpath -->
-<!-- 			<plugin> -->
-<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
-<!-- 				<artifactId>maven-dependency-plugin</artifactId> -->
-<!-- 				<version>2.3</version> -->
-<!-- 				<executions> -->
-<!-- 					<execution> -->
-<!-- 						<id>copy-dependencies</id> -->
-<!-- 						<phase>package</phase> -->
-<!-- 						<goals> -->
-<!-- 							<goal>copy-dependencies</goal> -->
-<!-- 						</goals> -->
-<!-- 						<configuration> -->
-<!-- 							<outputDirectory>${project.build.directory}/lib</outputDirectory> -->
-<!-- 						</configuration> -->
-<!-- 					</execution> -->
-<!-- 				</executions> -->
-<!-- 			</plugin> -->
-<!-- 			<plugin> -->
-<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
-<!-- 				<artifactId>maven-surefire-plugin</artifactId> -->
-<!-- 				<version>2.13</version> -->
-<!-- 				<configuration> -->
-<!-- 					<skip>true</skip> -->
-<!-- 				</configuration> -->
-<!-- 			</plugin> -->
+	<!-- <build> -->
+	<!-- <plugins> -->
+	<!-- <plugin> -->
+	<!-- <groupId>org.apache.maven.plugins</groupId> -->
+	<!-- <artifactId>maven-compiler-plugin</artifactId> -->
+	<!-- <version>2.3.2</version> -->
+	<!-- <configuration> -->
+	<!-- <source>1.7</source> -->
+	<!-- <target>1.7</target> -->
+	<!-- </configuration> -->
+	<!-- </plugin> -->
+	<!-- <plugin> -->
+	<!-- <groupId>org.apache.maven.plugins</groupId> -->
+	<!-- <artifactId>maven-javadoc-plugin</artifactId> -->
+	<!-- <version>2.8</version> -->
+	<!-- </plugin> -->
+	<!-- <plugin> -->
+	<!-- <groupId>org.apache.maven.plugins</groupId> -->
+	<!-- <artifactId>maven-source-plugin</artifactId> -->
+	<!-- <version>2.1.2</version> -->
+	<!-- </plugin> -->
+	<!-- Add/Edit items in META-INF/MANIFEST.MF -->
+	<!-- <plugin> -->
+	<!-- <groupId>org.apache.maven.plugins</groupId> -->
+	<!-- <artifactId>maven-jar-plugin</artifactId> -->
+	<!-- <version>2.3.2</version> -->
+	<!-- </plugin> -->
+	<!-- Copy dependencies into lib folder -->
+	<!-- To see full classpath use mvn dependency:build-classpath -->
+	<!-- <plugin> -->
+	<!-- <groupId>org.apache.maven.plugins</groupId> -->
+	<!-- <artifactId>maven-dependency-plugin</artifactId> -->
+	<!-- <version>2.3</version> -->
+	<!-- <executions> -->
+	<!-- <execution> -->
+	<!-- <id>copy-dependencies</id> -->
+	<!-- <phase>package</phase> -->
+	<!-- <goals> -->
+	<!-- <goal>copy-dependencies</goal> -->
+	<!-- </goals> -->
+	<!-- <configuration> -->
+	<!-- <outputDirectory>${project.build.directory}/lib</outputDirectory> -->
+	<!-- </configuration> -->
+	<!-- </execution> -->
+	<!-- </executions> -->
+	<!-- </plugin> -->
+	<!-- <plugin> -->
+	<!-- <groupId>org.apache.maven.plugins</groupId> -->
+	<!-- <artifactId>maven-surefire-plugin</artifactId> -->
+	<!-- <version>2.13</version> -->
+	<!-- <configuration> -->
+	<!-- <skip>true</skip> -->
+	<!-- </configuration> -->
+	<!-- </plugin> -->
 
-			<!-- Generate the release zip file (run during package step) -->
-<!-- 			<plugin> -->
-<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
-<!-- 				<artifactId>maven-assembly-plugin</artifactId> -->
-<!-- 				<version>2.3</version> -->
-<!-- 				<configuration> -->
-<!-- 					<appendAssemblyId>false</appendAssemblyId> -->
-<!-- 					<outputDirectory>${project.build.directory}/releases/</outputDirectory> -->
-<!-- 					<descriptors> -->
-<!-- 						<descriptor>${basedir}/src/main/assemblies/esplugin.xml</descriptor> -->
-<!-- 					</descriptors> -->
-<!-- 				</configuration> -->
-<!-- 				<executions> -->
-<!-- 					<execution> -->
-<!-- 						<id>generate-release-plugin</id> -->
-<!-- 						<phase>package</phase> -->
-<!-- 						<goals> -->
-<!-- 							<goal>single</goal> -->
-<!-- 						</goals> -->
-<!-- 					</execution> -->
-<!-- 				</executions> -->
-<!-- 			</plugin> -->
-<!-- 			<plugin> -->
-<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
-<!-- 				<artifactId>maven-enforcer-plugin</artifactId> -->
-<!-- 				<version>1.3.1</version> -->
-<!-- 				<executions> -->
-<!-- 					<execution> -->
-<!-- 						<id>enforce-versions</id> -->
-<!-- 						<goals> -->
-<!-- 							<goal>enforce</goal> -->
-<!-- 						</goals> -->
-<!-- 						<configuration> -->
-<!-- 							<rules> -->
-<!-- 								<requireJavaVersion> -->
-<!-- 									<version>[1.7,)</version> -->
-<!-- 								</requireJavaVersion> -->
-<!-- 							</rules> -->
-<!-- 						</configuration> -->
-<!-- 					</execution> -->
-<!-- 				</executions> -->
-<!-- 			</plugin> -->
-<!-- 		</plugins> -->
-<!-- 		<resources> -->
-<!-- 			<resource> -->
-<!-- 				<directory>src/main/resources</directory> -->
-<!-- 				<filtering>true</filtering> -->
-<!-- 				<includes> -->
-<!-- 					<include>**/*.properties</include> -->
-<!-- 				</includes> -->
-<!-- 			</resource> -->
-<!-- 		</resources> -->
-<!-- 	</build> -->
+	<!-- Generate the release zip file (run during package step) -->
+	<!-- <plugin> -->
+	<!-- <groupId>org.apache.maven.plugins</groupId> -->
+	<!-- <artifactId>maven-assembly-plugin</artifactId> -->
+	<!-- <version>2.3</version> -->
+	<!-- <configuration> -->
+	<!-- <appendAssemblyId>false</appendAssemblyId> -->
+	<!-- <outputDirectory>${project.build.directory}/releases/</outputDirectory> -->
+	<!-- <descriptors> -->
+	<!-- <descriptor>${basedir}/src/main/assemblies/esplugin.xml</descriptor> -->
+	<!-- </descriptors> -->
+	<!-- </configuration> -->
+	<!-- <executions> -->
+	<!-- <execution> -->
+	<!-- <id>generate-release-plugin</id> -->
+	<!-- <phase>package</phase> -->
+	<!-- <goals> -->
+	<!-- <goal>single</goal> -->
+	<!-- </goals> -->
+	<!-- </execution> -->
+	<!-- </executions> -->
+	<!-- </plugin> -->
+	<!-- <plugin> -->
+	<!-- <groupId>org.apache.maven.plugins</groupId> -->
+	<!-- <artifactId>maven-enforcer-plugin</artifactId> -->
+	<!-- <version>1.3.1</version> -->
+	<!-- <executions> -->
+	<!-- <execution> -->
+	<!-- <id>enforce-versions</id> -->
+	<!-- <goals> -->
+	<!-- <goal>enforce</goal> -->
+	<!-- </goals> -->
+	<!-- <configuration> -->
+	<!-- <rules> -->
+	<!-- <requireJavaVersion> -->
+	<!-- <version>[1.7,)</version> -->
+	<!-- </requireJavaVersion> -->
+	<!-- </rules> -->
+	<!-- </configuration> -->
+	<!-- </execution> -->
+	<!-- </executions> -->
+	<!-- </plugin> -->
+	<!-- </plugins> -->
+	<!-- <resources> -->
+	<!-- <resource> -->
+	<!-- <directory>src/main/resources</directory> -->
+	<!-- <filtering>true</filtering> -->
+	<!-- <includes> -->
+	<!-- <include>**/*.properties</include> -->
+	<!-- </includes> -->
+	<!-- </resource> -->
+	<!-- </resources> -->
+	<!-- </build> -->
 
-	
+
 	<packaging>pom</packaging>
 </project>
