--- a/fssearch-parent/pom.xml
+++ b/fssearch-parent/pom.xml
@@ -13,6 +13,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>1.2.1.RELEASE</version>
+	</parent>
+
 	<groupId>fr.charbo</groupId>
 	<artifactId>fssearch</artifactId>
 	<version>0.1-SNAPSHOT</version>
@@ -39,11 +46,13 @@
 		<poi.version>3.10.1</poi.version>
 		<lucene.version>4.10.2</lucene.version>
 		<fsriver.version>1.4.0-SNAPSHOT</fsriver.version>
+		<spring.boot.version>1.2.1.RELEASE</spring.boot.version>
+		<commons.lang.version>3.3.2</commons.lang.version>
 	</properties>
-
 
 	<dependencyManagement>
 		<dependencies>
+			<!-- ==== Elasticsearch === -->
 			<dependency>
 				<groupId>org.elasticsearch</groupId>
 				<artifactId>elasticsearch</artifactId>
@@ -104,6 +113,30 @@
 				<artifactId>log4j</artifactId>
 				<version>1.2.17</version>
 			</dependency>
+
+			<!-- === Commons === -->
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>${commons.lang.version}</version>
+			</dependency>
+
+			<!-- === Spring === -->
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter</artifactId>
+				<version>${spring.boot.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-web</artifactId>
+				<version>${spring.boot.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-test</artifactId>
+				<version>${spring.boot.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -121,7 +154,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.2</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
