--- a/fssearch-parent/fssearch-api/src/test/resources/default_parameters.properties
+++ b/fssearch-parent/fssearch-api/src/test/resources/default_parameters.properties
@@ -1,1 +1,4 @@
 fssearch.elastisearch.server.path=./target/data
+fssearch.default.river.name=test_river
+fssearch.default.river.path=./src/test/resources/docs
+fssearch.default.river.update.rate=15
