--- a/fssearch-parent/fssearch-web/pom.xml
+++ b/fssearch-parent/fssearch-web/pom.xml
@@ -35,8 +35,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<target>${java.version}</target>
-					<source>${java.version}</source>
+					<target>${javac.target.version}</target>
+					<source>${javac.source.version}</source>
 				</configuration>
 			</plugin>
 			<plugin>
