--- a/fssearch-parent/fssearch-dao/pom.xml
+++ b/fssearch-parent/fssearch-dao/pom.xml
@@ -27,7 +27,12 @@
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
 		</dependency>
-	
+
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-library</artifactId>
+			<version>2.10.4</version>
+		</dependency>
 	</dependencies>
 
 
