--- a/fssearch-parent/fssearch-web/package.json
+++ b/fssearch-parent/fssearch-web/package.json
@@ -1,11 +1,10 @@
 {
   "name": "fssearch-web-angularjs",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "karma start src/test/javascript/karma.config.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "BSD-2-Clause"
 }
