--- a/fssearch-parent/pom.xml
+++ b/fssearch-parent/pom.xml
@@ -81,6 +81,11 @@
                 <version>${elasticsearch.version}</version>
             </dependency>
             <dependency>
+			<groupId>fr.charbo</groupId>
+			<artifactId>fssearch-api</artifactId>
+			<version>0.1-SNAPSHOT</version>
+		</dependency>
+			<dependency>
                 <groupId>fr.pilato.elasticsearch.river</groupId>
                 <artifactId>fsriver</artifactId>
                 <version>${fsriver.version}</version>
