--- a/fssearch-parent/fssearch-web/bower.json
+++ b/fssearch-parent/fssearch-web/bower.json
@@ -21,6 +21,8 @@
         "angular-loader": "1.3.12",
         "angular-mocks": "1.3.12",
         "angular-route": "1.3.12",
-        "bootstrap": "3.2.0"
+        "bootstrap": "3.2.0",
+				"zeroclipboard": "2.2.0",
+				"angular-zeroclipboard": "0.4.1"
     }
 }
