debut spring integration

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ fssearch-parent/fssearch-dao/datas/test.properties
 fssearch-parent/fssearch-dao/src/main/resources/datas/test.lck
 fssearch-parent/fssearch-dao/src/main/resources/datas/test.log
 fssearch-parent/fssearch-dao/src/main/resources/datas/test.properties
+
+fssearch-parent/fssearch-integration/.classpath
+fssearch-parent/fssearch-integration/.project
