--- a/fssearch-parent/fssearch-web/src/main/resources/default_parameters.properties
+++ b/fssearch-parent/fssearch-web/src/main/resources/default_parameters.properties
@@ -2,3 +2,5 @@ fssearch.elastisearch.server.path=C:\\temp_es\\
 fssearch.default.river.name=main_river
 fssearch.default.river.path=C:\\temp_es\\doc\\
 fssearch.default.river.update.rate=1
+fssearch.default.river.extensions=*.doc;*.pdf
+fssearch.default.river.excluded.path=archives*;
