--- a/fssearch-parent/fssearch-web/.bowerrc
+++ b/fssearch-parent/fssearch-web/.bowerrc
@@ -1,3 +1,5 @@
 {
-    "directory": "src/main/webapp/vendor"
+    "directory": "src/main/webapp/vendor",
+		"proxy":"http://localhost:3128",
+		"https-proxy":"http://localhost:3128"
 }
