--- a/fssearch-parent/fssearch-web/bower.json
+++ b/fssearch-parent/fssearch-web/bower.json
@@ -17,12 +17,13 @@
     "tests"
   ],
   "dependencies": {
-        "angular": "1.3.12",
-        "angular-loader": "1.3.12",
-        "angular-mocks": "1.3.12",
-        "angular-route": "1.3.12",
-        "bootstrap": "3.2.0",
-				"zeroclipboard": "2.2.0",
-				"angular-zeroclipboard": "0.4.1"
-    }
+    "angular": "1.3.12",
+    "angular-loader": "1.3.12",
+    "angular-mocks": "1.3.12",
+    "angular-route": "1.3.12",
+    "bootstrap": "3.2.0",
+    "zeroclipboard": "2.2.0",
+    "angular-zeroclipboard": "0.4.1"
+  },
+  "description": "description"
 }
