--- a/fssearch-parent/fssearch-web/src/main/resources/default_parameters.properties
+++ b/fssearch-parent/fssearch-web/src/main/resources/default_parameters.properties
@@ -1,4 +1,1 @@
-fssearch.elastisearch.server.path=C:\\temp_es\\
-fssearch.default.river.name=documents
-fssearch.default.river.path=C:\\temp_es\\doc\\
-fssearch.default.river.update.rate=1
+fssearch.elastisearch.server.url=127.0.0.1
