--- a/.gitignore
+++ b/.gitignore
@@ -228,3 +228,33 @@ fssearch-parent/fssearch-batch/.settings/org.eclipse.core.resources.prefs
 fssearch-parent/fssearch-batch/.settings/org.eclipse.jdt.core.prefs
 fssearch-parent/fssearch-batch/.settings/org.eclipse.m2e.core.prefs
 fssearch-parent/npm-debug.log
+fssearch-parent/fssearch-api/.classpath
+fssearch-parent/fssearch-api/.project
+fssearch-parent/fssearch-api/.settings/org.eclipse.core.resources.prefs
+fssearch-parent/fssearch-api/.settings/org.eclipse.jdt.core.prefs
+fssearch-parent/fssearch-api/.settings/org.eclipse.m2e.core.prefs
+fssearch-parent/fssearch-api/target/classes/fr/charbo/client/ElasticClient.class
+fssearch-parent/fssearch-api/target/classes/fr/charbo/client/SearchClient.class
+fssearch-parent/fssearch-api/target/classes/fr/charbo/query/AbstractQueryField.class
+fssearch-parent/fssearch-api/target/classes/fr/charbo/query/ContentField.class
+fssearch-parent/fssearch-api/target/classes/fr/charbo/query/DateField.class
+fssearch-parent/fssearch-api/target/classes/fr/charbo/query/QueryField.class
+fssearch-parent/fssearch-api/target/classes/fr/charbo/query/result/Document.class
+fssearch-parent/fssearch-api/target/classes/fr/charbo/query/result/DocumentBuilder.class
+fssearch-parent/fssearch-api/target/classes/fr/charbo/query/result/Mapping.class
+fssearch-parent/fssearch-api/target/classes/fr/charbo/query/result/SearchResult.class
+fssearch-parent/fssearch-api/target/classes/fr/charbo/server/impl/ElasticServer.class
+fssearch-parent/fssearch-api/target/classes/fr/charbo/server/impl/SearchEngineImpl.class
+fssearch-parent/fssearch-api/target/classes/fr/charbo/server/SearchEngine.class
+fssearch-parent/fssearch-api/target/classes/fr/charbo/server/Server.class
+fssearch-parent/fssearch-api/target/classes/fr/charbo/SpringConfiguration.class
+fssearch-parent/fssearch-api/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+fssearch-parent/fssearch-api/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+fssearch-parent/fssearch-api/target/test-classes/default_parameters.properties
+fssearch-parent/fssearch-api/target/test-classes/docs/sample.txt
+fssearch-parent/fssearch-api/target/test-classes/docs/word.doc
+fssearch-parent/fssearch-api/target/test-classes/fr/charbo/query/result/DocumentBuilderTest.class
+fssearch-parent/fssearch-api/target/test-classes/fr/charbo/temp/Index.class
+fssearch-parent/fssearch-api/target/test-classes/fr/charbo/temp/Query.class
+fssearch-parent/fssearch-api/target/test-classes/fr/charbo/temp/StandAloneRunner.class
+fssearch-parent/fssearch-api/target/test-classes/fr/charbo/temp/Test.class
